Java21のメソッドからダウングレードさせる（17環境）